refactor: 초기데이터 파일 경로 properties로 분리

--- a/second-hand-b/src/main/resources/application-localdb.yml
+++ b/second-hand-b/src/main/resources/application-localdb.yml
@@ -12,3 +12,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+data:
+  init:
+    path:
+      region: /data/region_data.csv
+      category: /data/category_data.csv
