--- a/second-hand-b/src/main/resources/application.yml
+++ b/second-hand-b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   profiles:
     group:
-      local: localdb, oauth2
+      local: localdb, oauth2, cloud
     default: local
 front:
   server:
