--- a/second-hand-b/src/main/resources/application.yml
+++ b/second-hand-b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ spring:
   profiles:
     group:
       local: localdb, oauth2, cloud
+      dev: cloud,db,oauth2
     default: local
 front:
   server:
