--- a/second-hand-b/build.gradle
+++ b/second-hand-b/build.gradle
@@ -75,3 +75,10 @@ asciidoctor {
     configurations 'asciidoctorExt'
     dependsOn test
 }
+
+bootJar {
+    enabled = true
+}
+jar {
+    enabled = false
+}
