--- a/second-hand-b/src/main/resources/application.yml
+++ b/second-hand-b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   profiles:
     group:
       local: localdb, oauth2, cloud
-      dev: cloud,db,oauth2
+      dev: devcloud,devdb,devoauth2
     default: local
 front:
   server:
