feat: DockerFile 수정

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,12 +4,14 @@ events {
 
 http {
     upstream frontend {
+        least_conn;
         server fe1:5173;
         server fe2:5173;
         health_check;
     }
 
     upstream springboot {
+        least_conn;
         server be1:8080;
         server be2:8080;
         health_check;
