feat: DockerFile 수정

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,15 +5,15 @@ events {
 http {
     upstream frontend {
         least_conn;
-        server fe1:5173;
-        server fe2:5173;
+        server fe1:5173 max_fails=3 fail_timeout=10s;
+        server fe2:5173 max_fails=3 fail_timeout=10s;
         health_check;
     }
 
     upstream springboot {
         least_conn;
-        server be1:8080;
-        server be2:8080;
+        server be1:8080 max_fails=3 fail_timeout=10s;
+        server be2:8080 max_fails=3 fail_timeout=10s;
         health_check;
     }
 
