feat: DockerFile 수정

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,16 +4,12 @@ events {
 
 http {
     upstream frontend {
-        least_conn;
-        server fe1:5173 max_fails=3 fail_timeout=10s;
-        server fe2:5173 max_fails=3 fail_timeout=10s;
+        server fe1:5173;
         health_check;
     }
 
     upstream springboot {
-        least_conn;
-        server be1:8080 max_fails=3 fail_timeout=10s;
-        server be2:8080 max_fails=3 fail_timeout=10s;
+        server be1:8080;
         health_check;
     }
 
