refactor: 두 서버 주소 모두 추가  수정

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,10 +5,16 @@ events {
 http {
     upstream frontend {
         server fe1:5173;
+        server fe2:5173;
+
+        health_check interval=30s
     }
 
     upstream springboot {
         server be1:8080;
+        server be2:8080;
+
+        health_check interval=30s
     }
 
     server {
