--- a/nginx.conf
+++ b/nginx.conf
@@ -7,14 +7,14 @@ http {
         server fe1:5173;
         server fe2:5173;
 
-        health_check interval=30s
+        health_check interval=30s;
     }
 
     upstream springboot {
         server be1:8080;
         server be2:8080;
 
-        health_check interval=30s
+        health_check interval=30s;
     }
 
     server {
