--- a/nginx.conf
+++ b/nginx.conf
@@ -4,17 +4,13 @@ events {
 
 http {
     upstream frontend {
-        server fe1:5173;
-        server fe2:5173;
-
-        health_check interval=30s;
+        server fe1:5173 max_fails=3 fail_timeout=10s;
+        server fe2:5173 max_fails=3 fail_timeout=10s;
     }
 
     upstream springboot {
-        server be1:8080;
-        server be2:8080;
-
-        health_check interval=30s;
+        server be1:8080 max_fails=3 fail_timeout=10s;
+        server be2:8080 max_fails=3 fail_timeout=10s;
     }
 
     server {
