--- a/nginx.conf
+++ b/nginx.conf
@@ -4,15 +4,13 @@ events {
 
 http {
     upstream frontend {
-        server fe1:80;
-        server fe2:80;
-        health_check;
+        server fe1:5173 max_fails=3 fail_timeout=10s;
+        server fe2:5173 max_fails=3 fail_timeout=10s;
     }
 
     upstream springboot {
-        server be1:8080;
-        server be2:8080;
-        health_check;
+        server be1:8080 max_fails=3 fail_timeout=10s;
+        server be2:8080 max_fails=3 fail_timeout=10s;
     }
 
     server {
@@ -33,6 +31,13 @@ http {
         }
 
         location /oauth2/ {
+            proxy_pass http://springboot;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /login/ {
             proxy_pass http://springboot;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
