--- a/Dockerfile.fe
+++ b/Dockerfile.fe
@@ -4,8 +4,14 @@ FROM node:18
 # 작업 디렉터리 설정
 WORKDIR /app
 
+# 필요한 종속성을 설치합니다.
+COPY ./fe/package.json ./fe/package-lock.json ./
+WORKDIR /app/fe
+RUN npm install # 프로젝트의 종속성 설치
+WORKDIR /app
+
 # 빌드된 결과물을 이미지에 복사
-COPY ./path-to-your-build-directory ./  # 빌드된 결과물의 경로를 적절하게 수정해주세요.
+COPY ./fe/dist ./
 
 # 필요한 경우 실행 명령어 설정 (예: 간단한 서버 실행)
-CMD ["node", "your-server.js"]  # 이 부분은 필요한 실행 명령에 따라 수정해주세요.
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
