--- a/nginx.conf
+++ b/nginx.conf
@@ -4,13 +4,15 @@ events {
 
 http {
     upstream frontend {
-        server fe1:5173 max_fails=1 fail_timeout=10s;
-        server fe2:5173 max_fails=1 fail_timeout=10s;
+        server fe1:5173;
+        server fe2:5173;
+        check interval=5000 rise=1 fall=3 timeout=4000;
     }
 
-    upstream springboot {
-        server be1:8080 max_fails=1 fail_timeout=10s;
-        server be2:8080 max_fails=1 fail_timeout=10s;
+    upstream backend {
+        server be1:8080;
+        server be2:8080;
+        check interval=5000 rise=1 fall=3 timeout=4000;
     }
 
     server {
@@ -24,21 +26,21 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://springboot;
+            proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         location /oauth2/ {
-            proxy_pass http://springboot;
+            proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         location /login/ {
-            proxy_pass http://springboot;
+            proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
