--- a/.github/workflows/be-cd.yml
+++ b/.github/workflows/be-cd.yml
@@ -24,6 +24,17 @@ jobs:
           distribution: 'corretto'
           java-version: '11'
 
+      # Gradle wrapper와 의존성들을 캐싱합니다.
+      - name: Gradle 의존성들을 캐싱
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
       - name: 비밀 키 적용
         run: |
           echo "${{ secrets.CLOUD }}" | base64 --decode > second-hand-b/src/main/resources/application-cloud.yml
