refactor: BE CI/CD에서 Cash 적용 재수정

--- a/.github/workflows/be-cd.yml
+++ b/.github/workflows/be-cd.yml
@@ -29,8 +29,8 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ~/second-hand-b/.gradle/caches
-            ~/second-hand-b/.gradle/wrapper
+            ~/second-hand-b/gradle/caches
+            ~/second-hand-b/gradle/wrapper
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
