refactor: BE CI/CD에서 Cash 적용 재수정

--- a/.github/workflows/be-ci.yml
+++ b/.github/workflows/be-ci.yml
@@ -35,8 +35,8 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ~/second-hand-b/gradle/caches
-            ~/second-hand-b/gradle/wrapper
+            ~/.gradle/caches
+            ~/.gradle/wrapper
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
@@ -52,3 +52,10 @@ jobs:
           cd second-hand-b
           chmod +x gradlew
           ./gradlew build
+
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: always()
+        with:
+          files: |
+            test-results/**/*.xml
