--- a/.github/workflows/be-ci.yml
+++ b/.github/workflows/be-ci.yml
@@ -19,6 +19,21 @@ jobs:
     # 이 작업은 GitHub-hosted runner의 'ubuntu-latest' 환경에서 실행됩니다.
     runs-on: ubuntu-latest
 
+    services:
+      mysql_db:
+        image: mysql:8.0
+        container_name: second-hand
+        ports:
+          - 3306:3306 # HOST:CONTAINER
+        environment:
+          MYSQL_ROOT_PASSWORD: admin
+          MYSQL_DATABASE: secondhand
+          MYSQL_USER: test
+          MYSQL_PASSWORD: test
+        command:
+          - --character-set-server=utf8mb4
+          - --collation-server=utf8mb4_unicode_ci
+
     # 작업에서 실행될 순차적인 단계를 정의합니다.
     steps:
       - name: 코드 체크아웃
@@ -44,7 +59,6 @@ jobs:
       - name: 비밀 키 적용
         run: |
           echo "${{ secrets.CLOUD }}" | base64 --decode > second-hand-b/src/main/resources/application-cloud.yml
-          echo "${{ secrets.TESTDB }}" | base64 --decode > second-hand-b/src/main/resources/application-localdb.yml
           echo "${{ secrets.OAUTH2 }}" | base64 --decode > second-hand-b/src/main/resources/application-oauth2.yml
 
       - name: 프로젝트 빌드
@@ -58,4 +72,4 @@ jobs:
         if: always()
         with:
           files: |
-            test-results/**/*.xml
+            second-hand-b/build/test-results/**/*.xml
