refactor: CI/CD Docker 설정 수정

--- a/.github/workflows/be-cd.yml
+++ b/.github/workflows/be-cd.yml
@@ -15,17 +15,16 @@ jobs:
     services:
       mysql_db:
         image: mysql:8.0
-        container_name: second-hand
         ports:
           - 3306:3306 # HOST:CONTAINER
-        environment:
+        env:
           MYSQL_ROOT_PASSWORD: admin
           MYSQL_DATABASE: secondhand
           MYSQL_USER: test
           MYSQL_PASSWORD: test
-        command:
-          - --character-set-server=utf8mb4
-          - --collation-server=utf8mb4_unicode_ci
+        options: >-
+          --character-set-server=utf8mb4
+          --collation-server=utf8mb4_unicode_ci
 
     steps:
       # 저장소 코드를 체크아웃합니다.
