--- a/.github/workflows/be-ci.yml
+++ b/.github/workflows/be-ci.yml
@@ -22,17 +22,16 @@ jobs:
     services:
       mysql_db:
         image: mysql:8.0
-        container_name: second-hand
         ports:
           - 3306:3306 # HOST:CONTAINER
-        environment:
+        env:
           MYSQL_ROOT_PASSWORD: admin
           MYSQL_DATABASE: secondhand
           MYSQL_USER: test
           MYSQL_PASSWORD: test
-        command:
-          - --character-set-server=utf8mb4
-          - --collation-server=utf8mb4_unicode_ci
+        options: >-
+          --character-set-server=utf8mb4
+          --collation-server=utf8mb4_unicode_ci
 
     # 작업에서 실행될 순차적인 단계를 정의합니다.
     steps:
