--- a/.github/workflows/be-ci.yml
+++ b/.github/workflows/be-ci.yml
@@ -12,6 +12,10 @@ on:
   # GitHub 웹 인터페이스에서 "Run workflow" 버튼을 통해 실행할 수 있습니다.
   workflow_dispatch:
 
+permissions:
+  checks: write
+  pull-requests: write
+
 # 워크플로우에서 실행될 작업들을 정의합니다.
 jobs:
   # 'build'라는 이름의 작업을 정의합니다.
