--- a/.github/workflows/be-cd.yml
+++ b/.github/workflows/be-cd.yml
@@ -97,8 +97,6 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key.pem $USER@$HOST "
             sudo docker pull $TAG
           
-            sudo docker stop be1 && sudo docker rm be1
-            sudo docker run -d --name be1 --network=secondhand -v ~/be/yml:/be/config/:ro $TAG
-            sudo docker stop be2 && sudo docker rm be2
-            sudo docker run -d --name be2 --network=secondhand -v ~/be/yml:/be/config/:ro $TAG
+            sudo docker stop be && sudo docker rm be
+            sudo docker run -d --name be --network=secondhand -v ~/be/yml:/be/config/:ro $TAG
           "
