refactor: nignx cd변경

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,14 +4,12 @@ events {
 
 http {
     upstream frontend {
-        server fe1:5173;
-        server fe2:5173;
+        server fe:5173;
         check interval=5000 rise=1 fall=3 timeout=4000;
     }
 
     upstream backend {
-        server be1:8080;
-        server be2:8080;
+        server be:8080;
         check interval=5000 rise=1 fall=3 timeout=4000;
     }
 
