--- a/second-hand-b/build.gradle
+++ b/second-hand-b/build.gradle
@@ -55,6 +55,9 @@ dependencies {
 
     // aws s3
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+    // WebSocket
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
 }
 
 ext {
