refactor: CI 추가

--- a/.github/workflows/be-ci.yml
+++ b/.github/workflows/be-ci.yml
@@ -73,3 +73,6 @@ jobs:
         with:
           files: |
             second-hand-b/build/test-results/**/*.xml
+
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2
