--- a/.github/workflows/be-cd.yml
+++ b/.github/workflows/be-cd.yml
@@ -100,3 +100,55 @@ jobs:
             sudo docker stop be && sudo docker rm be
             sudo docker run -d --name be --network=secondhand -v ~/be/yml:/be/config/:ro $TAG
           "
+  Coveralls:
+    runs-on: ubuntu-latest
+
+    services:
+      mysql_db:
+        image: mysql:8.0
+        ports:
+          - 3306:3306 # HOST:CONTAINER
+        env:
+          MYSQL_ROOT_PASSWORD: admin
+          MYSQL_DATABASE: secondhand
+          MYSQL_USER: test
+          MYSQL_PASSWORD: test
+
+    # 작업에서 실행될 순차적인 단계를 정의합니다.
+
+    steps:
+      - name: 코드 체크아웃
+        uses: actions/checkout@v4
+
+      - name: Java 설정
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'corretto'
+          java-version: '11'
+
+      # Gradle wrapper와 의존성들을 캐싱합니다.
+      - name: Gradle 의존성들을 캐싱
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: 비밀 키 적용
+        run: |
+          echo "${{ secrets.CLOUD }}" | base64 --decode > second-hand-b/src/main/resources/application-cloud.yml
+          echo "${{ secrets.OAUTH2 }}" | base64 --decode > second-hand-b/src/main/resources/application-oauth2.yml
+
+      - name: jacoco
+        run: |
+          cd second-hand-b
+          chmod +x gradlew
+          ./gradlew clean test jacocoTestReport
+
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2
+        with:
+          base-path: second-hand-b/build/reports/jacoco/**/*.xml
