--- a/second-hand-b/src/main/resources/application-localdb.yml
+++ b/second-hand-b/src/main/resources/application-localdb.yml
@@ -12,9 +12,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
-
-data:
-  init:
-    path:
-      region: /data/region_data.csv
-      category: /data/category_data.csv
+    defer-datasource-initialization: true
+  sql:
+    init:
+      mode: always
